tests/elab/pass/numbers.t20
;; Integer literals.

(: zero Int)
(define zero
  (+ 0 (+ -2 (/ 8 (* 2 +2)))))
