tests/elab/fail/ill-formed-application.t20
;; Not quite an application term.

(: almost-an-application (-> Int Int))
(define (almost-an-application x) x + 2)